# My-Lang

./: .gitignore  CMakeLists.txt  README.md
example/: hello_world.cpp  interactive_parser.cpp
include/: ast.h  ir_builder.h  ir_generator.h  lexer.h  llvm_components.h  parser.h
src/: ast.cpp  ir_builder.cpp  ir_generator.cpp  lexer.cpp  llvm_components.cpp  parser.cpp
tests/: CMakeLists.txt
tests/unit/: lexer.cpp  lexer_tokens.cpp  parser.cpp  test_return.cpp
